# orb

./: .gitignore  AGENTS.md  ARCH.md  PLAN.md  README.md  overnight.md
.claude/: PROGRESS.md
backend/: .env.example  README.md  pyproject.toml
backend/src/: main.py
backend/src/agents/: base.py  claude_chat.py  claude_code.py  claude_computer.py  claude_research.py  echo.py  registry.py
backend/src/orb_backend/: __init__.py  main.py
frontend/: README.md  index.html  orb-shell.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  OrbChart.tsx  OrchestratorPanel.tsx  Panel.tsx  PinnedSummary.tsx  Scene.tsx  SuborbWindow.tsx  agentTypes.ts  api.ts  orbShader.ts  styles.css
frontend/src/orchestrators/: ChatOrchestrator.tsx  CodeOrchestrator.tsx  ComputerOrchestrator.tsx  PlaceholderOrchestrator.tsx  ResearchOrchestrator.tsx  VoiceOrchestrator.tsx
