[project]
name = "orb-backend"
version = "0.1.0"
description = "Orb shell backend — recursive AI agent orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "anthropic>=0.40",
    "websockets>=12",
    "pydantic>=2.6",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
orb-backend = "orb_backend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orb_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
